fixed layout issue for big screen on slide 7

--- a/src/components/ICO/SeventhSlide/MiddleData/middleData.css
+++ b/src/components/ICO/SeventhSlide/MiddleData/middleData.css
@@ -5,7 +5,7 @@
 }
 .paddingMiddleData{
     padding: 30px 50px;
-    margin: 40px;
+    margin: 0% 5% 0% 5%;
 }
 .bg_color_white{
     background-color: #fff;
